--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ejwa/gitinspector.git"
+    "url": "git+https://github.com/cyberlytics/gitinspector.git"
   },
   "keywords": [
     "git",
@@ -50,9 +50,9 @@
   ],
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/ejwa/gitinspector/issues"
+    "url": "https://github.com/cyberlytics/gitinspector/issues"
   },
-  "homepage": "https://github.com/ejwa/gitinspector#readme",
+  "homepage": "https://github.com/cyberlytics/gitinspector#readme",
   "devDependencies": {
     "crlf": "^1.1.0",
     "rimraf": "^2.5.4",
